--- a/trip-planner-trivago/frontend/src/components/Trip.css
+++ b/trip-planner-trivago/frontend/src/components/Trip.css
@@ -102,3 +102,13 @@
     font-size: 20px;
     font-family: Arial, sans-serif;
   }
+  .city-button {
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    background-color: blueviolet;
+    color: white;
+    cursor: pointer;
+    font-size: 20px;
+    font-family: Arial, sans-serif;
+  }
