linking stuff is done for now

--- a/trip-planner-trivago/frontend/src/components/AskAI.css
+++ b/trip-planner-trivago/frontend/src/components/AskAI.css
@@ -75,3 +75,29 @@
     border-radius: 50%;
     font-family: Arial, sans-serif;
   }
+  .home{
+    margin-left: 1700px;
+    padding: 17px 40px;
+    border-radius: 10px;
+    border: 0;
+    background-color: rgb(255, 56, 86);
+    letter-spacing: 1.5px;
+    font-size: 15px;
+    transition: all 0.3s ease;
+    box-shadow: rgb(201, 46, 70) 0px 10px 0px 0px;
+    color: hsl(0, 0%, 100%);
+    cursor: pointer;
+    text-decoration: none; /* Add this line to remove the underline */
+  }
+  
+  .home:hover {
+    box-shadow: rgb(201, 46, 70) 0px 7px 0px 0px;
+  }
+  
+  .home:active {
+    background-color: rgb(255, 56, 86);
+    /*50, 168, 80*/
+    box-shadow: rgb(201, 46, 70) 0px 0px 0px 0px;
+    transform: translateY(5px);
+    transition: 200ms;
+  }
