--- a/trip-planner-trivago/frontend/src/App.css
+++ b/trip-planner-trivago/frontend/src/App.css
@@ -24,3 +24,16 @@
   width: 100%;
   margin-bottom: 20px;
 }
+.card3 {
+  margin: 20px 20px 20px 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+}
+
+.internal-card3 {
+  width: 100%;
+  margin-bottom: 20px;
+}
