--- a/trip-planner-trivago/frontend/src/Home.css
+++ b/trip-planner-trivago/frontend/src/Home.css
@@ -167,3 +167,43 @@ html, body {
   margin-top: 0; /* Adjust margin to allow for centering */
   text-align: center; /* Center text inside option1 */
 }
+
+.container1 {
+  position: relative; /* This allows absolute positioning of children */
+  height: 100vh; /* Set a height if needed */
+}
+
+.leave {
+  position: absolute; /* Position relative to the parent */
+  top: -80px; /* Adjust as needed */
+  left: 40px; /* Adjust as needed */
+}
+
+.escape {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  cursor: pointer;
+  width: 150px;
+  height: 50px;
+  background-image: linear-gradient(to top, #D8D9DB 0%, #fff 80%, #FDFDFD 100%);
+  border-radius: 30px;
+  border: 1px solid #8F9092;
+  transition: all 0.2s ease;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color: #606060;
+  text-shadow: 0 1px #fff;
+  text-decoration: none;
+}
+
+.escape:hover {
+  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 3px 3px #CECFD1;
+}
+
+.escape:active,
+.escape:focus {
+  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 5px 3px #999, inset 0 0 30px #aaa;
+}
